--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
-#RewriteEngine on 
+#RewriteEngine on
 
-#RewriteCond %{REQUEST_URI} !^/public/ 
+#RewriteCond %{REQUEST_URI} !^/public/
 
 #RewriteRule ^(.*)$ public/$1 [L]
 
@@ -22,8 +22,8 @@
     RewriteCond %{REQUEST_URI} (.+)/$
     RewriteRule ^ %1 [L,R=301]
 
-    # Handle Front Controller...    
-    RewriteCond %{REQUEST_URI} !(\.css|\.js|\.png|\.jpg|\.gif|robots\.txt|\.eot|\.svg|\.ttf|\.woff|\.woff2)$ [NC]
+    # Handle Front Controller...
+    RewriteCond %{REQUEST_URI} !(\.css|\.js|\.png|\.jpg|\.jpeg|\.gif|robots\.txt|\.eot|\.svg|\.ttf|\.woff|\.woff2|\.doc|\.docx|\.xls|\.xlsx|\.pdf)$ [NC]
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
