--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "milon/barcode": "^5.3"
+        "milon/barcode": "^5.3",
+        "php-parallel-lint/php-console-color": "^0.3.0",
+        "php-parallel-lint/php-console-highlighter": "^0.5.0"
     },
     "require-dev": {
         "appzcoder/crud-generator": "^3.0",
